--- a/templates/menu.html
+++ b/templates/menu.html
@@ -27,6 +27,10 @@
             <a class="nav-link" href="/fileupload">파일업로드</a>
           </li>
 
+          <li class="nav-item">
+            <a class="nav-link" href="/bloglist">블로그 목록</a>
+          </li>
+
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Dropdown
